--- a/projet2014/layout/template.html
+++ b/projet2014/layout/template.html
@@ -30,15 +30,21 @@
 	<div class="block">
 	  <div class="inner">
 	    <div class="left_block">
+	      <p>
+		Le Rézozio est un site qui permet aux internautes de publier de courts messages. Il leur permet de consulter les messages publiés par les autres et de « s’abonner » pour suivre plus facilement les publications d’internautes de leur choix.
+	      </p>
 	      <h2>Créer un compte</h2>
+	      <form id="register">
+		<input class="register_input" type="text" />
+	      </form>
 	    </div>
 	    <div id="block_logo">
 	      <img src="images/big_logo.png" alt="Logo rezozio" id="logo"/>
 	    </div>
 	    <hr class="hr_clear"/>
-	  </div>
-	</div>
-      </div>
+	  </div> 
+	</div> <!-- Fin du block d'introduction -->
+      </div> <!-- Fin du contenu -->
       <script src="rezozio.js"></script>
     </body>
 </html>
