--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
     margin: auto;
 }
 
+#innercontent{
+    width: 100%; 
+    margin-bottom: 64px;
+}
+
 p {
     text-align: justify;
+}
+
+#listarticle li{
+    padding-bottom: 12px;
 }
