--- a/style.css
+++ b/style.css
@@ -67,13 +67,13 @@ td{
 		vertical-align: middle;
 }
 
-#rtitle {
+#nav {
 		text-align: right;
 		padding: 10px;
 		vertical-align: middle;
 }
 
-#rtitle a {
+#nav a {
 		display: block;
 		color: white;
 		text-decoration: none;
@@ -96,7 +96,7 @@ td{
 				text-align:center;
 				display: block;
 		}
-		#rtitle {
+		#nav {
 				display: none;
 		}
 }
