--- a/css/common.css
+++ b/css/common.css
@@ -21,6 +21,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
 		font-family: 'Playfair Display', serif;
 		color: #143D39;
+    margin-top:64px;
 }
 
 p, blockquote {
